Initial update to 1.19.3 [build] [publish]